--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,23 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppTheme.NoActionBar" parent="AppTheme">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
+
+    <style name="DetailTitleTextView">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/colorDarkGray</item>
+        <item name="android:layout_marginLeft">16dp</item>
+        <item name="android:layout_marginTop">32dp</item>
+    </style>
+
+    <style name="DetailContentTextView">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/colorGray</item>
+        <item name="android:layout_marginLeft">16dp</item>
+    </style>
 </resources>
